--- a/dropmo/package.json
+++ b/dropmo/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "peerjs": "peerjs --port 9000"
   },
   "dependencies": {
+    "node": "^25.6.0",
+    "peerjs": "^1.5.5",
     "pinia": "^3.0.4",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "vue": "^3.5.24"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "peer": "^1.0.2",
     "vite": "^7.2.4"
   }
 }
