--- a/dropmo/.gitignore
+++ b/dropmo/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Misc
+.DS_Store
+
+# IMPORTANT ASF
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +28,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
